storage/innobase/handler/ha_innodb.cc
@@ -3781,7 +3781,7 @@ innobase_init(
 	pages, even for larger pages */
 	if (UNIV_PAGE_SIZE > UNIV_PAGE_SIZE_DEF
 	    && innobase_buffer_pool_size < (24 * 1024 * 1024)) {
-		ib::info() << "innodb_page_size="
+		ib::error() << "innodb_page_size="
 			<< UNIV_PAGE_SIZE << " requires "
 			<< "innodb_buffer_pool_size > 24M current "
 			<< innobase_buffer_pool_size;
